Fixes around header spacing

--- a/src/css/imports/typography.css
+++ b/src/css/imports/typography.css
@@ -23,12 +23,17 @@ h6 { font-size: var(--smallFont) }
 
 .intro {
 	max-width: 80rem;
-	margin-top: 3rem;
 	margin-left: auto;
 	margin-right: auto;
-	font-size: var(--biggerFont);
+	font-size: var(--bigFont);
 	font-weight: 300;
 	line-height: 1.6;
+}
+
+@media (--for-tablet-landscape-up) {
+	.intro {
+		font-size: var(--biggerFont);
+	}
 }
 
 .content {
@@ -43,7 +48,7 @@ h6 { font-size: var(--smallFont) }
 	}
 
 	& ul {
-		margin-bottom: 2rem;	
+		margin-bottom: 2rem;
 	}
 
 	& li {
@@ -101,16 +106,13 @@ h6 { font-size: var(--smallFont) }
 	}
 }
 
-.article__title {
-	margin-top: 8rem;
-}
+
 .article__hero {
 	position: relative;
 	max-height: 64rem;
 	width: calc(100% + 8rem);
 	margin-left: -4rem;
 	margin-right: -4rem;
-	margin-top: 8rem;
 	padding-left: 4rem;
 	padding-right: 4rem;
 	overflow: hidden;
